--- a/style.css
+++ b/style.css
@@ -10,8 +10,11 @@
 body{
     height: 100vh;
     width: 100%;
-    background-color: aqua;
     /* overflow: hidden; */
+}
+
+input[type="radio"]{
+    display: none;
 }
 
 /* -----Slider----- */
@@ -21,10 +24,24 @@ body{
 }
 
 .slider .slides{
+    position: relative;
     width: 100%;
     height: 100%;
     display: flex;
     overflow: hidden;
+}
+
+/* Overlay */
+.slider .slides::after{
+    position: absolute;
+    content: '';
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: #000000;
+    opacity: 0.5;
+    z-index: 1;
 }
 
 .slider .slides .slide{
@@ -34,20 +51,18 @@ body{
     display: flex;
     justify-content: flex-start;
     align-items: center;
+    transition: all 0.5s ease-in;
+    /* animation-name: opc;
+    animation-duration: 3s;
+    animation-timing-function: ease-in;
+    animation-fill-mode: forwards;
+    animation-direction: normal; */
 }
-
-/* Overlay */
-.slider .slides .slide::after{
-    position: absolute;
-    content: '';
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    background-color: #000000;
-    opacity: 0.5;
-    z-index: 5;
-}
+/* 
+@keyframes opc {
+    from {opacity: 0.6;}
+    to {opacity: 1;}
+} */
 
 /* Images */
 .slider .slides .slide img{
@@ -55,3 +70,45 @@ body{
     min-height: 100%;
     object-fit: cover;
 }
+
+/* -----Manual Navigation----- */
+.slider .man-nav{
+    width: 100%;
+    position: fixed;
+    bottom: 30px;
+    z-index: 10;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.slider .man-nav .mn-btn{
+    width: 25px;
+    height: 25px;
+    border: 2px solid #fff;
+    border-radius: 50%;
+    margin: 0px 5px;
+    cursor: pointer;
+    transition: all 0.3s ease-in;
+}
+
+.slider .man-nav .mn-btn:hover{
+    background-color: #fff;
+    border-radius: 30%;
+}
+
+.active{
+    background-color: #fff;
+}
+
+/* .slider .slides #sld1:checked ~ .slide:nth-of-type(1){
+    margin-left: 0;
+}
+
+.slider .slides #sld2:checked ~ .slide:nth-of-type(1){
+    margin-left: -100%;
+}
+
+.slider .slides #sld3:checked ~ .slide:nth-of-type(1){
+    margin-left: -200%;
+} */
