--- a/style.css
+++ b/style.css
@@ -1,9 +1,11 @@
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@200;300;400;500&display=swap');
+
 /* -----Reset----- */
 *{
     margin: 0;
     padding: 0;
     box-sizing: border-box;
-    font-family: sans-serif;
+    font-family: 'Poppins', sans-serif;
 }
 
 /* -----Common----- */
@@ -44,6 +46,7 @@ input[type="radio"]{
     z-index: 1;
 }
 
+/* Slides */
 .slider .slides .slide{
     position: relative;
     min-width: 100%;
@@ -65,10 +68,50 @@ input[type="radio"]{
 } */
 
 /* Images */
-.slider .slides .slide img{
+.slides .slide img{
     min-width: 100%;
     min-height: 100%;
     object-fit: cover;
+}
+
+/* Description */
+.slides .slide .desc{
+    position: absolute;
+    width: 700px;
+    z-index: 2;
+    top: 50%;
+    left: 20%;
+    transform: translate(-20%, -50%);
+    padding: 25px;
+}
+
+.slide .desc h2{
+    font-size: 5rem;
+    color: #fff;
+    line-height: 5rem;
+}
+
+.slide .desc p{
+    font-size: 1rem;
+    margin: 25px 0px;
+    color: #fff;
+    line-height: 1.2rem;
+}
+
+.slide .desc a{
+    display: inline-block;
+    text-decoration: none;
+    font-size: 1rem;
+    color: #fff;
+    background-color: #e7af15;
+    padding: 20px 50px;
+    transition: all 0.3s ease-in;
+}
+
+.slide .desc a:hover{
+    background-color: #000;
+    color: #fff;
+    border-radius: 10px;
 }
 
 /* -----Manual Navigation----- */
@@ -99,6 +142,30 @@ input[type="radio"]{
 
 .active{
     background-color: #fff;
+}
+
+/* -----Responsive----- */
+@media(max-width: 800px){
+    .slides .slide .desc{
+        width: 90%;
+        left: 50%;
+        transform: translate(-50%, -50%);
+    }
+
+    .slide .desc h2{
+        font-size: 3.5rem;
+        line-height: 4rem;
+    }
+
+    .slide .desc p{
+        font-size: 0.8rem;
+        margin: 10px 0px;
+    }
+
+    .slide .desc a{
+        padding: 15px 30px;
+        font-size: 0.8rem;
+    }
 }
 
 /* .slider .slides #sld1:checked ~ .slide:nth-of-type(1){
