--- a/style.css
+++ b/style.css
@@ -12,7 +12,7 @@
 body{
     height: 100vh;
     width: 100%;
-    /* overflow: hidden; */
+    background-color: #2cec6c;
 }
 
 input[type="radio"]{
@@ -33,8 +33,18 @@ input[type="radio"]{
     overflow: hidden;
 }
 
+/* Slides */
+.slider .slides .slide{
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    left: -100%;
+    display: flex;
+    transition: all 0.5s ease-in;
+}
+
 /* Overlay */
-.slider .slides::after{
+.slider .slides .slide::after{
     position: absolute;
     content: '';
     top: 0;
@@ -42,30 +52,13 @@ input[type="radio"]{
     width: 100%;
     height: 100%;
     background-color: #000000;
-    opacity: 0.5;
+    opacity: 0.4;
     z-index: 1;
 }
 
-/* Slides */
-.slider .slides .slide{
-    position: relative;
-    min-width: 100%;
-    height: 100%;
-    display: flex;
-    justify-content: flex-start;
-    align-items: center;
-    transition: all 0.5s ease-in;
-    /* animation-name: opc;
-    animation-duration: 3s;
-    animation-timing-function: ease-in;
-    animation-fill-mode: forwards;
-    animation-direction: normal; */
+.curr{
+    transform: translateX(100%);
 }
-/* 
-@keyframes opc {
-    from {opacity: 0.6;}
-    to {opacity: 1;}
-} */
 
 /* Images */
 .slides .slide img{
@@ -83,6 +76,11 @@ input[type="radio"]{
     left: 20%;
     transform: translate(-20%, -50%);
     padding: 25px;
+    transition: all 0.3s ease-in;
+}
+
+.slides .slide.curr .desc{
+    
 }
 
 .slide .desc h2{
