--- a/style.css
+++ b/style.css
@@ -38,9 +38,13 @@ input[type="radio"]{
     position: absolute;
     width: 100%;
     height: 100%;
-    left: -100%;
+    opacity: 0;
     display: flex;
     transition: all 0.5s ease-in;
+}
+
+.slider .slides .slide.curr{
+    opacity: 1;
 }
 
 /* Overlay */
@@ -56,15 +60,17 @@ input[type="radio"]{
     z-index: 1;
 }
 
-.curr{
-    transform: translateX(100%);
-}
-
 /* Images */
 .slides .slide img{
     min-width: 100%;
     min-height: 100%;
     object-fit: cover;
+    transform: scale(0.8);
+    transition: all 0.5s ease-in;
+}
+
+.slider .slides .slide.curr img{
+    transform: scale(1);
 }
 
 /* Description */
@@ -72,15 +78,17 @@ input[type="radio"]{
     position: absolute;
     width: 700px;
     z-index: 2;
+    top: -50%;
+    left: 20%;
+    transform: translate(-20%, 50%);
+    padding: 25px;
+    transition: all 0.5s ease-in;
+}
+
+.slider .slides .slide.curr .desc{
     top: 50%;
     left: 20%;
     transform: translate(-20%, -50%);
-    padding: 25px;
-    transition: all 0.3s ease-in;
-}
-
-.slides .slide.curr .desc{
-    
 }
 
 .slide .desc h2{
