--- a/style.css
+++ b/style.css
@@ -55,7 +55,7 @@ input[type="radio"]{
     left: 0;
     width: 100%;
     height: 100%;
-    background-color: #000000;
+    background-color: #000;
     opacity: 0.4;
     z-index: 1;
 }
@@ -180,7 +180,7 @@ input[type="radio"]{
 
 /* -----Responsive----- */
 @media(max-width: 1100px){
-    /* Description */
+    /* Slide Description */
     .slides .slide .desc{
         left: 50%;
         transform: translateX(-50%);
@@ -194,7 +194,7 @@ input[type="radio"]{
 }
 
 @media(max-width: 800px){
-    /* Description */
+    /* Slide Description */
     .slides .slide .desc{
         width: 70%;
         min-width: 200px;
@@ -228,7 +228,7 @@ input[type="radio"]{
         right: 20px;
     }
 
-    /* Manual Navigation */
+    /* Radio Navigation */
     .slider .rad-nav .rad-btn{
         width: 15px;
         height: 15px;
